--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
                 <h2 class="text-3xl font-montserrat font-bold mb-12">Participa en 3 Simples Pasos</h2>
                 <div class="flex flex-col md:flex-row justify-center items-start gap-12 md:gap-16">
                     
-                    <div class="flex flex-col items-center text-center w-full md:w-1/3"> {/* Aplicamos text-center aquí */}
-                        <div class="bg-dark-gray p-5 rounded-full border-2 border-lightning-blue mb-4 inline-block"> {/* inline-block para que items-center funcione en el SVG */}
+                    <div class="flex flex-col items-center text-center w-full md:w-1/3">
+                        <div class="bg-dark-gray p-5 rounded-full border-2 border-lightning-blue mb-4 inline-block">
                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-lightning-blue" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z" /></svg>
                         </div>
                         <h3 class="text-xl font-montserrat font-bold mb-2">1. Paga la Entrada</h3>
-                        <p class="max-w-xs text-gray-400 mx-auto">Envía los sats a la LN Address oficial del sorteo.</p> {/* mx-auto para centrar el párrafo si es más corto que max-w-xs */}
+                        <p class="max-w-xs text-gray-400 mx-auto">Envía los sats a la LN Address oficial del sorteo.</p>
                     </div>
 
                     <div class="flex flex-col items-center text-center w-full md:w-1/3">
