--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LuckySats - 🍀</title>
+    <title>LuckySATS - 🍀</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -81,7 +81,7 @@
                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-lightning-blue" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z" /></svg>
                         </div>
                         <h3 class="text-xl font-montserrat font-bold mb-2">1. Compra tu boleta por 10.000 SATS</h3>
-                        <p class="max-w-xs text-gray-400 mx-auto">Envía los sats a la LN Address oficial del sorteo.</p>
+                        <p class="max-w-xs text-gray-400 mx-auto">Envía los SATS a la LN Address oficial del sorteo.</p>
                     </div>
 
                     <div class="flex flex-col items-center text-center w-full md:w-1/3">
@@ -111,7 +111,7 @@
                 
                 <div class="md:flex md:items-center md:gap-8">
                     <div class="mb-6 md:mb-0 flex-shrink-0">
-                        <p class="font-semibold mb-2 text-lg">1. Paga 10.000 sats:</p>
+                        <p class="font-semibold mb-2 text-lg">1. Paga 10.000 SATS:</p>
                         <div id="payment-qrcode" class="bg-white p-3 rounded-md inline-block mx-auto mt-2">
                             </div>
                     </div>
